--- a/source/package.json
+++ b/source/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@better-scroll/pull-up": "^2.0.6",
     "vant": "^2.10.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
